custom actions 실행 시 status input으로 넘김

--- a/.github/workflows/in-progress.yml
+++ b/.github/workflows/in-progress.yml
@@ -16,6 +16,7 @@ jobs:
           CURRENT_BRANCH: ${{ github.event.ref }}
         run: |
           echo $CURRENT_BRANCH
-      # - name: Use custom action
-      #   uses: modolee/automate-project-card
-      #   with: 'In Progress'
+      - name: Use custom action
+        uses: modolee/automate-project-card
+        with:
+          status: 'In Progress'
