--- a/.github/workflows/in-progress.yml
+++ b/.github/workflows/in-progress.yml
@@ -17,6 +17,6 @@ jobs:
         run: |
           echo $CURRENT_BRANCH
       - name: Use custom action
-        uses: modolee/automate-project-card
+        uses: modolee/automate-project-card@0.1.0
         with:
           status: 'In Progress'
