--- a/package.json
+++ b/package.json
@@ -2,20 +2,23 @@
   "name": "automate-project-card",
   "version": "0.1.0",
   "description": "Automate github project card status transition",
-  "main": "dist/main.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:modolee/automate-project-card.git",
   "author": "modolee <modolee.si@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "tsc",
-    "start": "node ./dist/main.js"
+    "package": "ncc build --source-map --license licenses.txt"
   },
   "dependencies": {
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.1"
   },
   "devDependencies": {
+    "@vercel/ncc": "^0.33.3",
     "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
     "typescript": "^4.6.3"
   }
 }
