정규식 입력 제거
- input에서 정규식 제거
- input에 gpa token 추가
- event handler class 형태로 변환

--- a/.github/workflows/project-card-transition.yml
+++ b/.github/workflows/project-card-transition.yml
@@ -12,7 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Automate Project Card Step
-        uses: modolee/automate-project-card@v0.1.5
+        uses: modolee/automate-project-card@v0.1.6
         with:
-          branch-name: '^.+#(\d+)$'
-          pull-request-title: '^.+\(resolved #\d+\)$'
+          gpa_token: ${{ secrets.GPA_TOKEN }}
