workflow 오타 수정 (gpa_token -> gpa-token)

--- a/.github/workflows/project-card-transition.yml
+++ b/.github/workflows/project-card-transition.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Automate Project Card Step
         uses: modolee/automate-project-card@v0.1.6
         with:
-          - gpa_token: ${{ secrets.GPA_TOKEN }}
+          gpa-token: ${{ secrets.GPA_TOKEN }}
