--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "automate-project-card",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Automate github project card status transition",
   "main": "dist/index.js",
   "repository": "git@github.com:modolee/automate-project-card.git",
@@ -10,7 +10,10 @@
     "prebuild": "rimraf dist",
     "build": "tsc",
     "package": "ncc build --source-map --license licenses.txt",
-    "all": "yarn build && yarn package"
+    "all": "yarn build && yarn package",
+    "test": "jest --config ./jest.config.json",
+    "test:watch": "yarn test --watch",
+    "test:cov": "yarn test --coverage"
   },
   "dependencies": {
     "@actions/core": "^1.6.0",
@@ -18,9 +21,12 @@
   },
   "devDependencies": {
     "@octokit/webhooks-definitions": "^3.67.3",
+    "@types/jest": "^27.4.1",
     "@vercel/ncc": "^0.33.3",
+    "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   }
 }
