--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "automate-project-card",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "Automate github project card status transition",
   "main": "dist/index.js",
   "repository": "git@github.com:modolee/automate-project-card.git",
@@ -10,7 +10,7 @@
     "prebuild": "rimraf dist",
     "build": "tsc",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest --config ./jest.config.json",
+    "test": "export GPA_TOKEN=$GPA_TOKEN && jest --config ./jest.config.json",
     "test:watch": "yarn test --watch",
     "test:cov": "yarn test --coverage",
     "all": "yarn build && yarn package && yarn test"
